<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">KodeCamp1</string>
    <string name="ezejitu_ugochi_ugboaku">Ezejitu Ugochi Ugboaku</string>
    <string name="track_android_kotlin">Track: Android Kotlin</string>
    <string name="track_level_beginner">Track Level: Beginner</string>
    <string name="bio">BIO</string>
    <string name="i_am_a_student_of_civil_engineering_in_university_of_nigeria_nsukka_i_am_a_web3_enthusiast_and_i_am_trying_to_better_my_app_development_skills">I am a student of civil engineering in University of Nigeria Nsukka. I am a web3 enthusiast and i am trying to better my app development skills.</string>
    <string name="my_picture">my picture</string>
    <string name="know_more">Know More</string>
    <string name="value">value</string>

    <string-array name="Dedication_array">
        <item>Hardworking</item>
        <item> Lazy</item>
        <item>Somewhat Lazy</item>
        <item>Very Lazy</item>
        <item>Dedicated</item>
        </string-array>
</resources>